# Copyright (C) 2022 Raúl Wolters

# This file is part of rustronomy-fits.

# rustronomy is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# rustronomy is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with rustronomy.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "rustronomy-fits"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/smups/rustronomy/"
authors = ["Raúl Wolters <rawolters11@gmail.com>"]

[lib]
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"

[dependencies]
simple-error = "0.2"
ndarray = "0.15"
num-traits = "0.2"
chrono = "0.4"
rayon = "1"
dyn-clone = "1"
rustronomy-core = {git = "https://github.com/smups/rustronomy"}

[dev-dependencies]
dirs = "4"
progressing = "3"

[profile.release]
strip = "debuginfo"