# Copyright (C) 2022 Raúl Wolters

# This file is part of rustronomy-fits.

# rustronomy is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# rustronomy is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with rustronomy.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "rustronomy-fits"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/smups/rustronomy-fits/"
homepage = "https://github.com/smups/rustronomy-fits/"
authors = ["Raúl Wolters <rawolters11@gmail.com>"]
exclude = [
    "examples/*",
    "resources/*",
    "tests/*",
    "fits_standard40aa-le.pdf"
]
description = "a rust library for reading and writing fits files"
keywords = ["astronomy", "astrophysics", "file-io", "FITS", "fits"]
categories = ["science", "parsing"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
simple-error = "0.2"
ndarray = "0.15"
num-traits = "0.2"
chrono = "0.4"
rayon = "1"
dyn-clone = "1"
indexmap = "1"
rustronomy-core = "0.1"

[dev-dependencies]
dirs = "4"
progressing = "3"