#  Copyright© 2022 Raúl Wolters(1)
#
#  This file is part of rustronomy-core.
#
#  rustronomy is free software: you can redistribute it and/or modify it under
#  the terms of the European Union Public License version 1.2 or later, as
#  published by the European Commission.
#
#  rustronomy is distributed in the hope that it will be useful, but WITHOUT ANY
#  WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
#  A PARTICULAR PURPOSE. See the European Union Public License for more details.
#
#  You should have received a copy of the EUPL in an/all official language(s) of
#  the European Union along with rustronomy.  If not, see 
#  <https://ec.europa.eu/info/european-union-public-licence_en/>.
#
#  (1) Resident of the Kingdom of the Netherlands; agreement between licensor and
#  licensee subject to Dutch law as per article 15 of the EUPL.

[package]
name = "rustronomy-fits"
version = "0.3.0"
edition = "2021"
readme = "./README.md"
license = "EUPL-v1.2-or-later"
repository = "https://github.com/smups/rustronomy-fits/"
homepage = "https://github.com/smups/rustronomy-fits/"
authors = ["Raúl Wolters <rawolters11@gmail.com>"]
exclude = [
    "examples/*",
    "resources/*",
    "tests/*",
    "fits_standard40aa-le.pdf"
]
description = "a rust library for reading and writing fits files"
keywords = ["astronomy", "astrophysics", "file-io", "FITS", "fits"]
categories = ["science", "parsing"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
ndarray = "0.15"
num-traits = "0.2"
chrono = "0.4"
rayon = "1"
dyn-clone = "1"
indexmap = "1"
rustronomy-core = "0.5.1"

[dev-dependencies]
dirs = "5"
progressing = "3"